Replace System.out.println with IO.println